fixing bug #28739 array_*diff() and array_*intersect() not clearing the fci cache before work. FCI call cache was introduced in HEAD. All functions that perform sorting of arrays clear the fci cache before work. array_*diff() and\ array_*intersect() were somehow missed to be updated.